Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-111289

(qdoc) warning: Undocumented parameter 'resourceState' in QNativeInterface::QSGD3D12Texture::fromNative()

    XMLWordPrintable

Details

    • 17e9d4480 (dev), e595831e7 (6.5), 6442f4103 (dev)

    Description

      This blocks CI:

      https://codereview.qt-project.org/c/qt/qtdeclarative/+/460941/1#message-c0a1142f945e5eff489bbf584264233088765dbb

      /home/qt/work/qt/qtdeclarative/src/quick/scenegraph/coreapi/qsgtexture.cpp:859: (qdoc) warning: Undocumented parameter 'resourceState' in QNativeInterface::QSGD3D12Texture::fromNative()
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            lagocs Laszlo Agocs
            mitch_curtis Mitch Curtis
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes