Add missing argument in native texture docs

Fixes: QTBUG-111289
Change-Id: I9185386fca7d926654932370841fb44a93929b15
Reviewed-by: Mitch Curtis <mitch.curtis@qt.io>
Reviewed-by: Andy Nichols <andy.nichols@qt.io>